test/parser/return.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): unit {
    // CHECK: [[# @LINE + 1 ]]:12: error: expected expression
    return |;

    // CHECK: [[# @LINE + 1 ]]:16: error: expected ';' at the end of a return statement
    return 0.0 |;

    return 1.0 + 2.0;
    // CHECK: ReturnStmt
    // CHECK-NEXT:   BinaryOperator: '+'
    // CHECK-NEXT:     NumberLiteral: '1.0'
    // CHECK-NEXT:     NumberLiteral: '2.0'
    
    return;
    // CHECK: ReturnStmt
    // CHECK-NOT: {{.*}}
}
